Removed comments, reformatted the code and added test cases